NetBSD Problem Report #50973

From www@NetBSD.org  Thu Mar 17 17:28:20 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 16AD87A0F3
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 17 Mar 2016 17:28:20 +0000 (UTC)
Message-Id: <20160317172819.437327ACA0@mollari.NetBSD.org>
Date: Thu, 17 Mar 2016 17:28:19 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sbin/fsck_lfs/lfs.c:291: set but not used ?
X-Send-Pr-Version: www-1.0

>Number:         50973
>Category:       bin
>Synopsis:       src/sbin/fsck_lfs/lfs.c:291: set but not used ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Mar 17 17:30:00 +0000 2016
>Closed-Date:    Sun Mar 20 04:37:14 +0000 2016
>Last-Modified:  Sun Mar 20 04:37:14 +0000 2016
>Originator:     David Binderman
>Release:        cvs dated 20160317
>Organization:
>Environment:
>Description:
[src/sbin/fsck_lfs/lfs.c:291]: (style) Variable 'blockcnt' is assigned a value that is never used.


Source code is

    blockcnt = (int64_t) 1 << lbc;

Suggest either use the variable or delete it.

>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:
From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/50973 CVS commit: src/sbin/fsck_lfs
Date: Sun, 20 Mar 2016 04:24:46 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Sun Mar 20 04:24:46 UTC 2016

 Modified Files:
 	src/sbin/fsck_lfs: lfs.c

 Log Message:
 Comment out unused logic. PR 50973


 To generate a diff of this commit:
 cvs rdiff -u -r1.70 -r1.71 src/sbin/fsck_lfs/lfs.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Sun, 20 Mar 2016 04:37:14 +0000
State-Changed-Why:
fixed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.