Comment out unused logic. PR 50973